# pyroll-zouhar-contact

./: README.md  hatch.toml  pyproject.toml
docs/: docs.md  model.md  usage.md
pyroll/: zouhar_contact.py
pyroll/zouhar_contact/: __init__.py  diamond_diamond.py  diamond_square.py  hookspecs.py  oval_square.py  round_oval.py  square_oval.py  zouhar_contact.py
pyroll_zouhar_contact/: __init__.py  diamond_diamond.py  diamond_square.py  hookspecs.py  oval_square.py  round_oval.py  square_oval.py  zouhar_contact.py
test/: test_contact_area.py  test_solve.py  test_solve_3fold.py  test_solve_square_oval.py  test_three_roll_contact_area.py
