[project]
name = "pyroll-zouhar-contact"
description = "Plugin for PyRolL providing contact area estimation by G. Zouhar."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0b",
]

dynamic = ["version"]

[project.optional-dependencies]
pillar-model = [
    "pyroll-pillar-model ~= 2.0b",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
