[project]
name = "pyroll-zouhar-contact"
description = "Plugin for PyRolL providing contact area estimation by G. Zouhar."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email="christoph.renzing@imf.tu-freiberg.de"},
    { name = "Richard Pfeifer", email="richard.pfeifer@imf.tu-freiberg.de"}
]
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "pyroll-core ~= 3.0",
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll.readthedocs.io"
Repository = "https://github.com/pyroll-project/pyroll-zouhar-contact"
Documentation = "https://github.com/pyroll-project/pyroll-zouhar-contact/blob/main/docs/docs.pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
